--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -6,7 +6,7 @@
 </h:head>  
 <h:body>  
     <h:form>  
-        <p:commandButton action="Search?faces-redirect=true" icon="ui-icon-search" value="Search" />  
+        <p:commandButton action="Search?faces-redirect=true" icon="ui-icon-search" value="Buscar" />  
     </h:form>  
   
     <p:spacer> </p:spacer>  
