--- a/web/Search.xhtml
+++ b/web/Search.xhtml
@@ -3,13 +3,13 @@
   
 <h:head>  
   
-    <h2><center>Search User For Edit And Delete</center></h2>  
+    <h2><center>Buscar Usuário para Editar e Deletar</center></h2>  
 </h:head>  
 <h:body>  
     <h:form>  
   
           
-        <p:commandButton action="index?faces-redirect=true" value="Back" icon="ui-icon-arrowthick-1-w" />  
+        <p:commandButton action="index?faces-redirect=true" value="Voltar" icon="ui-icon-arrowthick-1-w" />  
   
     </h:form>  
   
@@ -17,25 +17,25 @@
   
         <p:growl id="messages" showDetail="true" />  
         <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">  
-            <p:outputLabel value="Please Select Record Number:" />  
-            <p:selectOneMenu value="#{userBean.selectUser}" editable="true" label="Please Select Record Number:" filter="true" id="ulist2">  
+            <p:outputLabel value="Selecione um registro:" />  
+            <p:selectOneMenu value="#{userBean.selectUser}" editable="true" label="Selecione um registro:" filter="true" id="ulist2">  
                 <f:selectItem itemLabel="Select One" itemValue="" />  
                 <f:selectItems value="#{userBean.users}" var="user" itemLabel="#{user.recordNo}" itemValue="#{user.recordNo}" />  
   
             </p:selectOneMenu>  
         </h:panelGrid>  
-        <p:commandButton value="Search" update=":form:userTable" type="Submit" icon="ui-icon-search" action="#{userBean.searchbyRecordno()}" />  
+        <p:commandButton value="Buscar" update=":form:userTable" type="Submit" icon="ui-icon-search" action="#{userBean.searchbyRecordno()}" />  
         <br/>  
         <p:spacer> </p:spacer>  
   
         <p:dataTable var="user" id="userTable" editable="true" value="#{userBean.searchByRecordNoList}">  
             <f:facet name="header">  
-                Row Editing  
+                Edição  
             </f:facet>  
             <p:ajax event="rowEdit" listener="#{userBean.onRowEdit}" update=":form:messages" />  
             <p:ajax event="rowEditCancel" listener="#{userBean.onCancel}" update=":form:messages" />  
   
-            <p:column headerText="RecordNo">  
+            <p:column headerText="Código">  
                 <p:cellEditor>  
                     <f:facet name="output">  
                         <h:outputText value="#{user.recordNo}" />  
@@ -46,7 +46,7 @@
                 </p:cellEditor>  
             </p:column>  
   
-            <p:column headerText=" Name">  
+            <p:column headerText="Nome">  
                 <p:cellEditor>  
                     <f:facet name="output">  
                         <h:outputText value="#{user.name}" />  
@@ -58,7 +58,7 @@
   
             </p:column>  
   
-            <p:column headerText="Age">  
+            <p:column headerText="Idade">  
                 <p:cellEditor>  
                     <f:facet name="output">  
                         <h:outputText value="#{user.age}" />  
@@ -68,7 +68,7 @@
                     </f:facet>  
                 </p:cellEditor>  
             </p:column>  
-            <p:column headerText="Date of Birth">  
+            <p:column headerText="Data Nascimento">  
                 <p:cellEditor>  
                     <f:facet name="output">  
                         <h:outputText value="#{user.dob}">  
@@ -81,7 +81,7 @@
                     </f:facet>  
                 </p:cellEditor>  
             </p:column>  
-            <p:column headerText="Sex" width="100">  
+            <p:column headerText="Genêro" width="100">  
                 <p:cellEditor>  
                     <f:facet name="output">  
                         <h:outputText value="#{user.sex}" />  
@@ -95,7 +95,7 @@
                     </f:facet>  
                 </p:cellEditor>  
             </p:column>  
-            <p:column headerText="Remark">  
+            <p:column headerText="Descrição">  
                 <p:cellEditor>  
                     <f:facet name="output">  
                         <h:outputText value="#{user.remark}" />  
@@ -105,16 +105,16 @@
                     </f:facet>  
                 </p:cellEditor>  
             </p:column>  
-            <p:column headerText="Edit" style="width:100px">  
+            <p:column headerText="Editar" style="width:100px">  
                 <p:rowEditor />  
             </p:column>  
-            <p:column headerText="Delete">  
+            <p:column headerText="Deletar">  
   
                 <p:commandButton value="Delete" icon="ui-icon-trash" update="form:userTable" type="button" onclick="PF('confirmDialog').show()" />  
                 <p:confirmDialog message="Are you sure you want to delete this record?Record once deleted can not be retrieved." header="Deleting" severity="alert" widgetVar="confirmDialog">  
-                    <p:commandButton value="Yes Sure" action="#{userBean.deleteUser(user)}" oncomplete="PF('confirmDialog').hide()" />  
+                    <p:commandButton value="Sim, Claro!" action="#{userBean.deleteUser(user)}" oncomplete="PF('confirmDialog').hide()" />  
   
-                    <p:commandButton value="Not Yet" onclick="PF('confirmDialog').hide();" type="button" />  
+                    <p:commandButton value="Ainda não" onclick="PF('confirmDialog').hide();" type="button" />  
                 </p:confirmDialog>  
             </p:column>  
         </p:dataTable>  
